Changed the label regarding using the pictures on the website

--- a/src/main/python/templates/order.html
+++ b/src/main/python/templates/order.html
@@ -54,7 +54,7 @@
             Brukes i markedsføring: {{ customer["marketing_allowed" ] | boolean_to_yes_no }}
           </div>
           <div class="col-sm-3">
-            Brukes på internett: {{ customer["internet_allowed" ] | boolean_to_yes_no }}
+            Brukes på hjemmesiden: {{ customer["internet_allowed" ] | boolean_to_yes_no }}
           </div>
         </div>
       </div>
