--- a/src/main/python/templates/print-order.html
+++ b/src/main/python/templates/print-order.html
@@ -477,7 +477,7 @@
                 Kan brukes i markedsf&oslash;ring:
                 {{ customer["marketing_allowed" ] | boolean_to_yes_no }}
                 <br/>
-                Kan brukes i på internett:
+                Kan brukes i på hjemmesiden:
                 {{ customer["internet_allowed" ] | boolean_to_yes_no }}
                 <br/>
                 Betalingstype: {{ order["payment_type"] }}
