--- a/src/main/python/templates/customer.html
+++ b/src/main/python/templates/customer.html
@@ -199,7 +199,7 @@
         </div>
         <div class="form-group">
           <label class="col-sm-2 control-label">
-            Kan brukes på internett
+            Kan brukes på hjemmesiden
           </label>
           <div class="col-sm-1">
             <input id="internet_allowed"
