--- a/src/main/python/templates/new-customer.html
+++ b/src/main/python/templates/new-customer.html
@@ -135,7 +135,7 @@
         </div>
         <div class="form-group">
           <label class="control-label col-xs-2">
-            Kan brukes på internett
+            Kan brukes på hjemmesiden
           </label>
           <div class="col-xs-10">
             <input id="internet_allowed"
