First steps for invoice support

--- a/src/main/python/templates/menu.html
+++ b/src/main/python/templates/menu.html
@@ -15,11 +15,8 @@
               Fotograferinger uten forstørrelser
             </a>
           </li>
-          <li>
-            <a href="/reports/promise-list">
-              Leveranser
-            </a>
-          </li>
+          <li><a href="/reports/promise-list">Leveranser</a></li>
+          <li><a href="/report/invoice-overview">Faktura oversikt</a></li>
         </ul>
       </div>
     </div>
