--- a/src/main/python/templates/order.html
+++ b/src/main/python/templates/order.html
@@ -295,8 +295,9 @@
               onclick="window.location.href = '/order/{{ order['id'] }}/delete'">
         Slett ordre
       </button>
-      <button class="btn btn-default"
-              onclick="window.location.href = '/invoice/?order-id={{ order['id'] }}'">
+      <button
+        class="btn btn-default"
+        onclick="window.location.href = '/invoice/of/{{ order['id'] }}'">
         Lag faktura
       </button>
 {% endblock %}
