First steps on invoice overview
- fixed menu
- invoice view is getting better, now contains order items
- improved navigation between order and invoice.

--- a/src/main/python/templates/delete-invoice.html
+++ b/src/main/python/templates/delete-invoice.html
@@ -1,12 +1,18 @@
 {% extends "base.html" %}
 {% block title %}
       <h1>
-        Slette faktura nummer {{ invoice["id"] }},
-        "{{ invoice["name"] }}"?
+        Slette faktura nummer {{ invoice["id"] }} ?
       </h1>
-      <p>
-        Opprettet: {{ invoice["creation_date"] | sn }}
-      </p>
+      <ul>
+        <li>
+          Opprettet: {{ invoice["creation_date"] | sn }}
+        </li>
+        <li>
+          <a href="/order/{{ invoice["order_id"] }}">
+            Ordrenummer: {{ invoice["order_id"] | sn }}
+          </a>
+        </li>
+      </ul>
 {% endblock %}
 {% block content %}
       <div class="row">
