Create & delete invoice works pretty well now
- Decision made: an order can only have one invoice. The DB layer
  supports multiple invoices per order, but the UI implements a one
  invoice policy: if there currently is an invoice, display a link to
  it (on the order page), if no invoice exist, display a button to
  create it.

- Viewing an invoice is coming along too, but lacks
  exclusive/inclusive tax views, total++

- Still to do is the invoice overview

--- a/src/main/python/templates/invoice.html
+++ b/src/main/python/templates/invoice.html
@@ -1,9 +1,17 @@
 {% extends "base.html" %}
 {% block title %}
+<p>
+  <code>
+{{ invoice }}
+  </code>
+  <code>
+{{ order_item_list }}
+  </code>
+</p>
       <h1>
         Faktura av
-        <a href="/order/{{ invoice['order_id'] }}">
-          ordre nummer {{ invoice['order_id'] | sn }}
+        <a href="/order/{{ order['id'] }}">
+          ordre nummer {{ order['id'] | sn }}
         </a>
       </h1>
       {% endblock %}
@@ -38,6 +46,20 @@
           </div>
         </div>
         {% endif %}
+        <div class="form-group">
+          <label class="control-label col-xs-2" for="order_id">
+            Ordrenummer
+          </label>
+          <div class="col-xs-10">
+            <input class="form-control"
+                   id="order_id"
+                   name="order_id"
+                   value="{{ order['id'] | sn }}"
+                   placeholder="Ordrenummer"
+                   readonly
+            />
+          </div>
+        </div>
         <div class="form-group">
           <label class="control-label col-xs-2" for="due_date">
             Forfallsdato
