--- a/src/main/python/templates/order.html
+++ b/src/main/python/templates/order.html
@@ -151,7 +151,7 @@
           <th>Varelinje #</th>
           <th>Vare</th>
           <th>Antall</th>
-          <th>Rabatt</th>
+          <th>Rabatt %</th>
           <th>Sum</th>
           <th>Opprettet</th>
           <th>Kommentar</th>
