Re-used customer info block from the order view
- re-factored it to be an include
- invoice and order now both use it
- extended the DB schema so that invoice has a foreign key to
  customer, this avoids a extra joins when presenting an invoice and
  wanting to get hold of the customer.

--- a/src/main/python/templates/invoice.html
+++ b/src/main/python/templates/invoice.html
@@ -14,6 +14,7 @@
       {% endif %}
 {% endblock %}
 {% block content %}
+      {% include "inline-customer-info.html" %}
       <form action="/invoice/{{ invoice['id'] }}"
             method="post"
             class="form-horizontal">
@@ -40,6 +41,12 @@
               value="{{ order['id'] | sn }}"
               placeholder="Ordrenummer"
               readonly
+            />
+            <input
+              type="hidden"
+              id="customer_id"
+              name="customer_id"
+              value="{{ order['customer_id'] | sn }}
             />
           </div>
         </div>
