Invoice overview now contains total amount
- the total amount of the search performed, considering date range and
  paid/unpaid invoice.

--- a/src/main/python/templates/reports/invoice-overview.html
+++ b/src/main/python/templates/reports/invoice-overview.html
@@ -19,7 +19,8 @@
         </div>
       </form>
       <h2>
-        Totalt {{ invoice_list | length }} fakturaer med en omsetning på kr
+        Totalt {{ invoice_list | length }} fakturaer med en omsetning
+        på kr {{ total_amount }}
       </h2>
       <table class="table table-striped">
         <tr>
