Adjusted invoice print view according to customer feedback

--- a/src/main/python/templates/menu.html
+++ b/src/main/python/templates/menu.html
@@ -10,7 +10,7 @@
           <li><a href="/customer">Ny kunde</a></li>
           <li><a href="/product-list">Produkter</a></li>
           <li><a href="/reports/order-overview">Ordreoversikt</a></li>
-          <li><a href="/reports/invoice-overview">Fakturaoversikt</a></li>
+          <li><a href="/reports/invoice-overview">Fakturajournal</a></li>
           <li>
             <a href="/reports/sessions-without-further-orders">
               Fotograferinger uten forstørrelser
