--- a/src/main/python/templates/print-invoice.html
+++ b/src/main/python/templates/print-invoice.html
@@ -28,31 +28,27 @@
     </title>
   </head>
   <body>
-    <h1 class="center">Faktura fra Studio S A/S </h1>
-    <table>
-      <tr>
-        <td>
-          <h2>Faturaadresse</h2>
-          Kundenummer: {{ customer["id"] }}<br/>
-          {{ customer["first_name"] }} {{ customer["last_name" ] }}<br/>
-          {{ customer["address"] | sn }}<br/>
-          {{ customer["post_code"] }} {{ customer["post_place"] }}<br/>
-          <br/>
-          Ordrenummer: {{ invoice["order_id"] }}<br/>
-          Fakturanummer: {{ invoice["id"] }}<br/>
-          Fakturadato: {{ invoice["creation_date"] | compact_norwegian_date }}<br/>
-          Forfallsdato: {{ invoice["due_date"] | compact_norwegian_date }}<br/>
-        </td>
-        <td>
-          <h2>Studio S A/S</h2>
-          Torget 2, 1707 Sarpsborg<br/>
-          Telefon: 69 15 57 60<br/>
-          Web: www.studio-s.no<br/>
-          Bankgiro: 9486 05 31555<br/>
-          Foretaksnummer: 935 350 794<br/>
-        </td>
-      </tr>
-    </table>
+    <h2>Faktura</h2>
+    <div style="float: right;">
+      Studio S A/S<br/>
+      Torget 2, 1707 Sarpsborg<br/>
+      Telefon: 69 15 57 60<br/>
+      Web: www.studio-s.no<br/>
+      Kontonummer: 9486 05 31555<br/>
+      Bankgiro: 9486 05 31555<br/>
+      Foretaksnummer: 935 350 794<br/>
+    </div>
+    <div>
+      Kundenummer: {{ customer["id"] }}<br/>
+      {{ customer["first_name"] }} {{ customer["last_name" ] }}<br/>
+      {{ customer["address"] | sn }}<br/>
+      {{ customer["post_code"] }} {{ customer["post_place"] }}<br/>
+      <br/>
+      Ordrenummer: {{ invoice["order_id"] }}<br/>
+      Fakturanummer: {{ invoice["id"] }}<br/>
+      Fakturadato: {{ invoice["creation_date"] | compact_norwegian_date }}<br/>
+      Forfallsdato: {{ invoice["due_date"] | compact_norwegian_date }}<br/>
+    </div>
     <hr/>
     <table>
       <tr>
@@ -129,11 +125,5 @@
       </tr>
     </table>
     <hr/>
-    <p class="center">
-      Copyright &copy;
-      Studio S, Fotografmester Terje S. Johansen A/S ❧
-      Foretaksnummer: 935 350 794 ❧
-      Kontonummer: 9486 05 31555
-    </p>
   </body>
 </html>
