--- a/src/main/python/templates/reports/invoice-overview.html
+++ b/src/main/python/templates/reports/invoice-overview.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-      <h1>Fakturaoversikt</h1>
+      <h1>Fakturajournal</h1>
       {% include "from-to-date-info.html" %}
 {% endblock %}
 {% block content %}
